# TIPE

./: .gitignore  CMakeLists.txt  README.md  charge_condensateur.c  charge_condensateur.h  charge_condensateur_gtk.c  editeur_circuit.c  editeur_circuit.h  tipe.ui
gnuplot/: gnuplot.c
graph/: graph  graph.c  graph.h  graph2.c  notes
gui/: CMakeLists.txt  charge_condensateur.c  charge_condensateur.h  editeur_circuit.c  editeur_circuit.h  editeur_circuit.ui  tipe.ui
journal_de_bord/: .~lock.diapo1.odp#  MERCIER.odp  diapo1.odp  diapofinal.odp  ed.hup  formules.aux  formules.tex
new/: .mcot.txt.kate-swp  mcot.odt  mcot.txt  mcot2.odt  res.ml  res2.ml  test.ipynb  test.py  translate.c
